<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeQuizz">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:orientation="vertical"
            android:gravity="center_horizontal"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/liste_des_quizz"
            android:textSize="26sp"
            android:layout_marginBottom="40sp"
        />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cin_ma"
                            android:layout_marginRight="10sp"
                        />
                        <Button
                            android:id="@+id/cinemaBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demarrer"
                            android:layout_marginLeft="10sp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jeux_vid_os"
                            android:layout_marginRight="10sp"
                            />
                        <Button
                            android:id="@+id/jeuxVideoBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demarrer"
                            android:layout_marginLeft="10sp"

                            />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/musique"
                            android:layout_marginRight="10sp"
                            />
                        <Button
                            android:id="@+id/musiqueBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demarrer"
                            android:layout_marginLeft="10sp"

                            />

                </LinearLayout>




        </LinearLayout>

</FrameLayout>
