<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:textSize="26sp"
            android:layout_marginTop="10sp"

            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
        >
            <TextView
                android:id="@+id/pseudoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:text="@string/pseudo"
                    />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pseudoEt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints=""
                android:labelFor="@id/pseudoEt"
            />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commencer"
                android:onClick="connectToGame"
                />

        </LinearLayout>


</RelativeLayout>
